--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,14 @@ dependencies {
     // spring
     def springVersion = "4.2.6.RELEASE"
 
+    // common
+    def googleGuavaVersion = '19.0'
+
+    // logging
+    //def log4jVersion = "1.2.16"
+    def slf4jVersion = "1.7.21"
+    def logbackVersion = "1.1.7"
+
     // unit test
     def junitVersion = "4.12"
     def hamcrestVersion = "1.3"
@@ -24,7 +32,19 @@ dependencies {
     // ----------------------------------------------------------------------------------------------------
     //  for compile
     // ----------------------------------------------------------------------------------------------------
+
+    // ====== spring ======
     compile "org.springframework:spring-webmvc:$springVersion"
+
+
+    // ====== common ======
+    compile "com.google.guava:guava:$googleGuavaVersion"
+
+    // ====== logging ======
+    compile "org.slf4j:slf4j-api:$slf4jVersion"
+    //compile "org.slf4j:jcl-over-slf4j:$slf4jVersion"
+    //compile "org.slf4j:slf4j-log4j12:$slf4jVersion"
+    compile "ch.qos.logback:logback-classic:$logbackVersion"
 
 
     // ----------------------------------------------------------------------------------------------------
