--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 group 'com.xiaoma'
-version '1.0-SNAPSHOT'
+// version '1.0-SNAPSHOT'
+version '1.0.1a'
 
 apply plugin: 'java'
 apply plugin: 'idea'
