--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,12 @@ dependencies {
     def jaxbImplVersion = "2.2.11"
 
     // common
+    def commonsFileuploadVersion = "1.3.1"
+    def fastjsonVersion = '1.2.11'
+    def codehausJacksonMapper2Version = "2.7.4"
+    def woodstoxCoreAslVersion = '4.4.1'
     def googleGuavaVersion = '19.0'
+
     // httpclient
     def apacheHttpClientVersion = '4.5.2'
 
@@ -55,6 +60,7 @@ dependencies {
     def junitVersion = "4.12"
     def hamcrestVersion = "1.3"
     def mockitoVersion = "1.9.5"
+    def jsonpathVersion = "2.2.0"
 
 
     // ----------------------------------------------------------------------------------------------------
@@ -74,9 +80,18 @@ dependencies {
 
 
     // ====== common ======
+    compile "com.alibaba:fastjson:$fastjsonVersion"
     compile "com.google.guava:guava:$googleGuavaVersion"
+    compile "com.fasterxml.jackson.core:jackson-annotations:$codehausJacksonMapper2Version"
+    compile "com.fasterxml.jackson.core:jackson-core:$codehausJacksonMapper2Version"
+    compile "com.fasterxml.jackson.core:jackson-databind:$codehausJacksonMapper2Version"
+    compile "com.fasterxml.jackson.module:jackson-module-jaxb-annotations:$codehausJacksonMapper2Version"
+    compile "com.fasterxml.jackson.module:jackson-module-parameter-names:$codehausJacksonMapper2Version"
+    compile "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:$codehausJacksonMapper2Version"
     // http://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient
     compile "org.apache.httpcomponents:httpclient:$apacheHttpClientVersion"
+
+
 
     // ====== logging ======
     compile "org.slf4j:slf4j-api:$slf4jVersion"
@@ -98,7 +113,8 @@ dependencies {
     testCompile "org.springframework:spring-test:$springVersion",
                 "junit:junit:$junitVersion",
                 "org.hamcrest:hamcrest-library:$hamcrestVersion",
-                "org.mockito:mockito-core:$mockitoVersion"
+                "org.mockito:mockito-core:$mockitoVersion",
+                "com.jayway.jsonpath:json-path:$jsonpathVersion"
 
 
 }
